Fixed bug where you couldn't jump messages

--- a/OldRegularMessageDividers.css
+++ b/OldRegularMessageDividers.css
@@ -1,4 +1,5 @@
-.groupStart-23k01U {
+[class="groupStart-23k01U"],
+[class="groupStart-23k01U da-groupStart"] {
     position: relative;
 }
 
